adler-mcp/src/server/snapshots/adler_mcp__server__tools__tests__outcome_row_json_contract.snap
---
source: adler-mcp/src/server/tools.rs
expression: pretty_json(&row)
---
{
  "site": "GitHub",
  "kind": "Found",
  "url": "https://github.example/alice",
  "elapsed_ms": 42,
  "reason": null,
  "evidence": [
    "HTTP 200 (status_found)",
    "body matched profile marker"
  ],
  "profile_evidence": [
    {
      "kind": "external_link",
      "field": "website",
      "value": "https://alice.dev",
      "source": {
        "site": "GitHub",
        "url": "https://github.example/alice",
        "origin": "extractor",
        "observed_at_ms": 1781192451000,
        "access_path": {
          "transport": "browser",
          "escalated": true,
          "authenticated": true
        }
      }
    },
    {
      "kind": "display_name",
      "field": "name",
      "value": "Alice Example",
      "source": {
        "site": "GitHub",
        "url": "https://github.example/alice",
        "origin": "extractor",
        "observed_at_ms": 1781192451000,
        "access_path": {
          "transport": "browser",
          "escalated": true,
          "authenticated": true
        }
      }
    },
    {
      "kind": "bio",
      "field": "bio",
      "value": "Security researcher and maintainer",
      "source": {
        "site": "GitHub",
        "url": "https://github.example/alice",
        "origin": "extractor",
        "observed_at_ms": 1781192451000,
        "access_path": {
          "transport": "browser",
          "escalated": true,
          "authenticated": true
        }
      }
    }
  ],
  "confidence": {
    "score": 100,
    "label": "verified",
    "reasons": [
      {
        "kind": "found_by_signal"
      },
      {
        "kind": "signal_evidence",
        "count": 2
      },
      {
        "kind": "profile_metadata_extracted",
        "count": 3
      },
      {
        "kind": "profile_metadata_rich",
        "count": 3
      },
      {
        "kind": "authenticated_access"
      },
      {
        "kind": "browser_transport"
      },
      {
        "kind": "escalated_transport"
      }
    ]
  },
  "transport": "browser",
  "escalations": 1
}
